--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.3.30"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.113"
 sqlx = { version = "0.7", features = ["runtime-tokio", "uuid", "chrono", "postgres"] }
+thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.1", features = ["trace"] }
 tracing = "0.1.40"
