Add REST endpoint to delete competition

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://postgres:changeme@192.168.1.102:3001/clubswimcomp
+DATABASE_URL=postgres://postgres:changeme@localhost:3001/clubswimcomp
