--- a/clubswimcomp-service/Cargo.toml
+++ b/clubswimcomp-service/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "clubswimcomp"
+name = "clubswimcomp-service"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,7 +12,12 @@ chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3.30"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.113"
-sqlx = { version = "0.7", features = ["runtime-tokio", "uuid", "chrono", "postgres"] }
+sqlx = { version = "0.7", features = [
+    "runtime-tokio",
+    "uuid",
+    "chrono",
+    "postgres",
+] }
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.1", features = ["trace"] }
