--- a/clubswimcomp-ui/Cargo.toml
+++ b/clubswimcomp-ui/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.6.6", features = ["csr", "nightly"] }
 leptos_router = { version = "0.6.6", features = ["csr", "nightly"] }
+phosphor-leptos = "0.3.1"
