Move model types into own crate for use with UI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,3 @@
 [workspace]
 resolver = "2"
-members = [
-    "clubswimcomp-service",
-    "clubswimcomp-ui"
-]
-
-
+members = ["clubswimcomp-service", "clubswimcomp-types", "clubswimcomp-ui"]
