--- a/clubswimcomp-service/Cargo.toml
+++ b/clubswimcomp-service/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clubswimcomp-types = { path = "../clubswimcomp-types" }
+
 anyhow = "1.0"
 axum = { version = "0.7", features = ["macros"] }
 chrono = { version = "0.4", features = ["serde"] }
