--- a/clubswimcomp-ui/Cargo.toml
+++ b/clubswimcomp-ui/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = { version = "0.4.34", features = ["serde"] }
 clubswimcomp-types = { path = "../clubswimcomp-types" }
 
 console_error_panic_hook = "0.1.7"
