--- a/clubswimcomp-service/Cargo.toml
+++ b/clubswimcomp-service/Cargo.toml
@@ -22,7 +22,7 @@ sqlx = { version = "0.7", features = [
 ] }
 thiserror = "1.0.57"
 tokio = { version = "1.36.0", features = ["full"] }
-tower-http = { version = "0.5.1", features = ["trace"] }
+tower-http = { version = "0.5.1", features = ["trace", "cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
