--- a/clubswimcomp-ui/Cargo.toml
+++ b/clubswimcomp-ui/Cargo.toml
@@ -13,3 +13,4 @@ leptos = { version = "0.6.6", features = ["csr", "nightly"] }
 leptos_router = { version = "0.6.6", features = ["csr", "nightly"] }
 phosphor-leptos = "0.3.1"
 uuid = { version = "1.7.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
