--- a/clubswimcomp-ui/Cargo.toml
+++ b/clubswimcomp-ui/Cargo.toml
@@ -12,5 +12,7 @@ gloo-net = "0.5.0"
 leptos = { version = "0.6.6", features = ["csr", "nightly"] }
 leptos_router = { version = "0.6.6", features = ["csr", "nightly"] }
 phosphor-leptos = "0.3.1"
-uuid = { version = "1.7.0", features = ["serde"] }
+uuid = { version = "1.7.0", features = ["serde", "v4"] }
 serde = { version = "1.0", features = ["derive"] }
+wasm-bindgen = "0.2.91"
+leptos-use = "0.10.3"
