--- a/clubswimcomp-service/Cargo.toml
+++ b/clubswimcomp-service/Cargo.toml
@@ -27,3 +27,4 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 uuid = { version = "1.7.0", features = ["serde", "v4"] }
 qrcode = { version = "0.13.0", default-features = false, features = ["svg"] }
+dotenv = "0.15.0"
